WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157848
[GTK][EFL] ImageBufferCairo should accept resolution factor
https://bugs.webkit.org/show_bug.cgi?id=157848
Summary
[GTK][EFL] ImageBufferCairo should accept resolution factor
Yusuke Suzuki
Reported
2016-05-18 10:43:53 PDT
In Cairo environment, device scale factor is transparently handled by HW side using cairo_surface_set_device_scale. ImageBuffer ignores resolution factor now. So we Filter and FilterEffect should not consider that ImageBuffer's size is scaled. This leads crash in kangax's ES6 compat table page in HiDPI PC.
Attachments
Patch
(12.14 KB, patch)
2016-06-21 07:59 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(14.12 KB, patch)
2016-06-21 09:17 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(15.00 KB, patch)
2016-06-21 11:54 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(19.45 KB, patch)
2016-06-22 10:06 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2016-06-21 07:59:08 PDT
Created
attachment 281745
[details]
Patch WIP
WebKit Commit Bot
Comment 2
2016-06-21 08:00:42 PDT
Attachment 281745
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 3
2016-06-21 08:01:29 PDT
Typical crashing page: ES6 compat table page.
https://kangax.github.io/compat-table/es6/
Yusuke Suzuki
Comment 4
2016-06-21 09:17:32 PDT
Created
attachment 281752
[details]
Patch WIP2
Yusuke Suzuki
Comment 5
2016-06-21 11:54:46 PDT
Created
attachment 281764
[details]
Patch WIP3
Yusuke Suzuki
Comment 6
2016-06-22 10:06:35 PDT
Created
attachment 281846
[details]
Patch
Yusuke Suzuki
Comment 7
2016-06-24 08:45:32 PDT
Comment on
attachment 281846
[details]
Patch Thanks for your review!
WebKit Commit Bot
Comment 8
2016-06-24 09:06:00 PDT
Comment on
attachment 281846
[details]
Patch Clearing flags on attachment: 281846 Committed
r202421
: <
http://trac.webkit.org/changeset/202421
>
WebKit Commit Bot
Comment 9
2016-06-24 09:06:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug